# pyisyox

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  pythonpublish.yml
docs/: Makefile  README.md  conf.py  connection-flow.md  constants.rst  events.rst  index.rst  library.rst  quickstart.rst  requirements.txt
docs/api/: helpers.rst  index.rst  pyisyox.auth.rst  pyisyox.classifier.rst  pyisyox.client.rst  pyisyox.constants.rst  pyisyox.controller.rst  pyisyox.exceptions.rst  pyisyox.helpers.rst  pyisyox.helpers.session.rst  pyisyox.logging.rst  pyisyox.paths.rst  pyisyox.redactor.rst  pyisyox.rst  pyisyox.runtime.events.rst  pyisyox.runtime.folder.rst  pyisyox.runtime.group.rst  pyisyox.runtime.network_resource.rst  pyisyox.runtime.node.rst  pyisyox.runtime.program.rst  pyisyox.runtime.rst  pyisyox.runtime.variable.rst  pyisyox.runtime.ws.rst  pyisyox.schema.cmd.rst  pyisyox.schema.editor.rst  pyisyox.schema.linkdef.rst  pyisyox.schema.nodedef.rst  pyisyox.schema.profile.rst  pyisyox.schema.rst  pyisyox.schema.uom.rst  pyisyox.util.rst
pyiox/: __init__.py  __main__.py  clock.py  configuration.py  connection.py  constants.py  exceptions.py  isy.py  networking.py  node_servers.py
pyiox/events/: eventreader.py  router.py  tcpsocket.py  websocket.py
pyiox/helpers/: __init__.py  entity.py  entity_platform.py  events.py  models.py  session.py  xml.py
pyiox/nodes/: __init__.py  folder.py  group.py  node.py  node_events.py  nodebase.py
pyiox/programs/: __init__.py  folder.py  program.py
pyiox/util/: __init__.py
pyiox/variables/: __init__.py  variable.py
pyisy/: node_servers.py
pyisy/nodes/: node.py
pyisyox/: __init__.py  __main__.py  _rest_compat.py  auth.py  classifier.py  client.py  clock.py  configuration.py  connection.py  constants.py  controller.py  exceptions.py  isy.py  logging.py  networking.py  node_servers.py  paths.py  redactor.py
pyisyox/events/: eventreader.py  router.py  strings.py  tcpsocket.py  websocket.py
pyisyox/helpers/: __init__.py  entity.py  entity_platform.py  events.py  models.py  session.py  timeit.py  xml.py
pyisyox/nodes/: __init__.py  folder.py  group.py  node.py  node_events.py  nodebase.py
pyisyox/programs/: __init__.py  folder.py  program.py
pyisyox/runtime/: __init__.py  _commands.py  _normalize.py  events.py  folder.py  group.py  network_resource.py  node.py  program.py  variable.py  ws.py
pyisyox/schema/: __init__.py  cmd.py  editor.py  linkdef.py  nls.py  nodedef.py  profile.py  uom.py
pyisyox/testing/: __init__.py  _eisy6_profile.json
pyisyox/util/: __init__.py  backports.py  output.py
pyisyox/variables/: __init__.py  variable.py
script/: run-in-env.sh
tests/: conftest.py  test_controller.py  test_fixture_anonymization.py  test_init_module.py  test_logging.py  test_main_cli.py  test_session.py
tests/fixtures/eisy6/: api_groups.json  api_programs.json  api_variables_int.json  api_variables_state.json  profiles_with_flume.json  rest_nodes.xml  rest_status_dimmers.xml  rest_status_local.xml  rest_status_thermostat.xml  rest_status_zwave_lock.xml  rest_zwave_nodedefs.xml  variable_write.har  ws-frames-polyglot.har  ws-frames.jsonl
tests/fixtures/eisy6_json/: api_nodes_full.json
tests/test_auth/: test_auth.py  test_redactor.py
tests/test_client/: conftest.py  test_client.py  test_parsers.py  test_status_overlay.py
tests/test_helpers/: test_helpers.py
tests/test_runtime/: test_event_replay.py  test_events.py  test_events_internal.py  test_groups.py  test_lifecycle.py  test_node.py  test_node_introspection.py  test_normalize.py  test_program.py  test_to_dict.py  test_variables.py  test_ws.py
tests/test_schema/: conftest.py  test_classifier.py  test_editor_codec.py  test_merge.py  test_nls.py  test_nodedef.py  test_profile.py  test_uom.py
tests/test_testing/: test_builders.py
