[build-system]
requires = ["setuptools>=82.0.1", "wheel","setuptools_scm[toml]>=10.0.5",]
build-backend = "setuptools.build_meta"

[project]
name = "pyisyox"
description = "Async Python client for Universal Devices' eisy / Polisy controllers running IoX 6+."
license = "Apache-2.0"
keywords = ["home", "automation", "iox", "UDI", "polisy", "eisy", "home-assistant"]
authors = [
    {name = "Ryan Kraus", email = "automicus@gmail.com"},
    {name = "shbatm", email = "support@shbatm.com"}
]
readme = "README.md"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
]
dynamic = ["version"]
requires-python = ">=3.11"

dependencies = [
    "aiohttp>=3.13.5",
    "colorlog>=6.10.1",
]

[project.urls]
"Source Code" = "https://github.com/shbatm/pyisyox"
"Homepage" = "https://github.com/shbatm/pyisyox"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyisyox*"]
exclude = ["script*"]

[tool.setuptools.package-data]
"pyisyox" = ["py.typed"]
"pyisyox.testing" = ["_eisy6_profile.json"]

[tool.pylint.MAIN]
py-version = "3.11"
ignore = [
    "tests",
]
# Use a conservative default here; 2 should speed up most setups and not hurt
# any too bad. Override on command line as appropriate.
jobs = 2

load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
]
persistent = false
extension-pkg-allow-list = []
fail-on = [
    "I",
]

[tool.pylint.BASIC]
class-const-naming-style = "any"
good-names = [
    "_",
    "ev",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "Run",
    "ip",
    "ws",
    "st",
    "ts",
    "tx",
    "rx",
]

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff-format
# locally-disabled - it spams too much
# duplicate-code - unavoidable
# cyclic-import - doesn't test if both import on load
# abstract-class-little-used - prevents from setting right foundation
# unused-argument - generic callbacks and setup methods create a lot of warnings
# too-many-* - are not enforced for the sake of readability
# too-few-* - same as too-many-*
# abstract-method - with intro of async there are always methods missing
# inconsistent-return-statements - doesn't handle raise
# too-many-ancestors - it's too strict.
# wrong-import-order - ruff guards this
# consider-using-f-string - str.format sometimes more readable
# ---
# Enable once current issues are fixed:
# consider-using-namedtuple-or-dataclass (Pylint CodeStyle extension)
# consider-using-assignment-expr (Pylint CodeStyle extension)
disable = [
    "format",
    "abstract-method",
    "cyclic-import",
    "duplicate-code",
    "inconsistent-return-statements",
    "locally-disabled",
    "not-context-manager",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "too-many-boolean-expressions",
    "unused-argument",
    "wrong-import-order",
    "consider-using-f-string",
    "consider-using-namedtuple-or-dataclass",
    "consider-using-assignment-expr",
]
enable = [
    #"useless-suppression",  # temporarily every now and then to clean them up
    "use-symbolic-message-instead",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPECHECK]
ignored-classes = [
    "_CountingAttr",  # for attrs
]
mixin-class-rgx = ".*[Mm]ix[Ii]n"

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
]

[tool.pylint.TYPING]
runtime-typing = true

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 72

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
]
# Add the repo root so cross-test imports like
# ``from tests.test_client.conftest import FakeSession`` resolve
# under any pytest invocation (CI's ``pytest -q`` and local
# ``pytest tests/`` both honour this).
pythonpath = ["."]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
# Lines that aren't executable at runtime — typing-only imports, the
# CLI bootstrap line that pytest can't reach, and abstract / not-yet-
# implemented stubs. ``exclude_also`` extends coverage.py's defaults
# (``pragma: no cover``) rather than replacing them.
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing\\.TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
required-version = ">=0.15.12"
target-version = "py311"
line-length = 110

[tool.ruff.lint]
ignore = [
    "S101",    # use of assert
    "TID252",  # skip
    "SLF001",  # design choice
    "SIM110",  # this is slower
    "S318",    # intentional
    "TRY003",  # nice to have
    "PLR2004", # too many to fix right now
    "PLR0913", # ship has sail on this one
    "PLR0911", # ship has sail on this one
    "PLR0912", # hard to fix without a major refactor
    "PLR0915", # hard to fix without a major refactor
    "PYI034",  # enable when we drop Py3.10
    "RUF003",  # probably not worth fixing
    "SIM105",  # this is slower
    "ASYNC110", # requires asyncio.Event refactor
    "RUF012",  # mutable class attributes; requires broader refactor
    "RUF009",  # dataclass default; requires field(default_factory=...)
    "PERF203", # try-except in loop; requires restructuring
]
select = [
    "ASYNC", # async rules
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "S",     # flake8-bandit
    "F",     # pyflakes
    "E",     # pycodestyle
    "W",     # pycodestyle
    "UP",    # pyupgrade
    "I",     # isort
    "RUF",   # ruff specific
    "FLY",   # flynt
    "G",     # flake8-logging-format
    "PERF",  # Perflint
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-pathlib
    "PYI",   # flake8-pyi
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "T100",  # Trace found: {name} used
    "T20",   # flake8-print
    "TID",   # Tidy imports
    "TRY",   # tryceratops
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "S101",
    "S105",   # tests use hardcoded sample tokens/passwords by design
    "S106",
    "SLF001",
    "PLR2004",
    "PT011",
    "PT006",
    "PGH003",
    "PT007",
    "PT027",
    "PLW0603",
    "PLR0915",
    "FLY002",
    "PT018",
    "PLR0124",
    "SIM202",
    "PT012",
    "TID252",
    "PLR0913",
    "SIM102",
    "SIM108",
    "T201",
    "PT004",
]
"examples/**/*" = [
    "T201", # intended
]
"pyisyox/__main__.py" = ["T201"]
"docs/**/*" = ["PTH100"]
"pyisyox/logging.py" = ["PLC0415"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.codespell]
ignore-words-list = "pyisyox,hass,isy,nid,dof,dfof,don,dfon,tim,automic,automicus,batlvl,homeassistant,colorlog,nd,anull,enull"
skip = "./.*,*.json,*.yaml,*.toml"
quiet-level = 2
